--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai-edge-stream": "^2.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "sharp": "^0.32.0",
     "uuid": "^9.0.0"
